OpenID groups and role are not updated on second login